Ensure we have right property specified when deleting

--- a/app/views/trends.scala.html
+++ b/app/views/trends.scala.html
@@ -34,7 +34,7 @@
                     @smiColMap(s);">
 
                     <br>
-                    <a href="@controllers.routes.Application.delete(s)" class="card-link text-muted">
+                    <a href="@controllers.routes.Application.delete(s)&property=@property" class="card-link text-muted">
                         <i class="fa fa-trash" aria-hidden="true"></i>
                     </a>
                     <a href="@controllers.routes.Application.download(s, property)" class="card-link text-muted">
