more html styling

--- a/app/views/tform.scala.html
+++ b/app/views/tform.scala.html
@@ -87,16 +87,16 @@
         padding-bottom: 0.5em;">
         <div class="form-group">
             @helper.CSRF.formField
-            <input type="text" placeholder="Enter a SMILES string" size="45" id='@form("smiles").name' name='@form("smiles").name'>
-            <a id="showSketcher" class="btn btn-primary">Draw</a>
-            <select id='@form("property").name' name='@form("property").name'>
+            <a title="Draw a structure" id="showSketcher" class="btn btn-primary"><i class="fa fa-flask" aria-hidden="true"></i></a>
+            <input type="text" class="form-control" placeholder="Enter a SMILES string" size="45" id='@form("smiles").name' name='@form("smiles").name'>
+            <select title="Property whose trend will be computed" class="form-control" id='@form("property").name' name='@form("property").name'>
                 <option value="compounds" @if(property.equals("compounds")) { selected }>Compounds</option>
                 <option value="assays" @if(property.equals("assays")) { selected }>Assays</option>
                 <option value="logS" @if(property.equals("logS")) { selected }>Solubility</option>
                 <option value="Fsp3" @if(property.equals("Fsp3")) { selected }>Fsp3</option>
                 <option value="qed" @if(property.equals("qed")) { selected }>Chemical Beauty</option>
             </select>
-            <button>Search</button>
+            <button type="submit" class="btn btn-default">Search</button>
         </div>
     </div>
 }
