Added blurb. Bookmarked scaffolds now set the smiles in the text box rather than kicking of a new query

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -7,7 +7,12 @@
     <div class="container vertical-center" id="main-box">
         <div class="row">
             <div class="col-1">
-                Some blurb about the app
+                The Scaffold Trend Explorer helps you look at property trends for a scaffold over time. Currently a
+                small set of properties are considered, but will be expanded over time. See here for a listing of
+                properties. You can compare trends for multiple scaffolds simultaneously and download the trend data
+                for individual scaffolds or all of them at one go. Note that for small scaffolds, query times can be
+                long and as a result, we disable queries for scaffolds with less than 8 heavy atoms. If you're
+                willing to wait, this can be enabled.
             </div>
         </div>
 
