--- a/app/views/menu.scala.html
+++ b/app/views/menu.scala.html
@@ -16,14 +16,14 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Bookmarked Scaffolds<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href='/ste/search?smiles=C1CC2(CCNCC2)C2=CC=CC=C12&property=@property'>
+                        <li><a class='bmlink' smiles='C1CC2(CCNCC2)C2=CC=CC=C12'>
                             Spiroindanypiperadine</a></li>
-                        <li><a href='/ste/search?smiles=C1=CN2C=CC=CC2=C1&property=@property'/>Indolizine</a></li>
-                        <li><a href='/ste/search?smiles=C1=CC2=C(C=C1)N=CC=C2&property=@property'>Quinoline</a></li>
-                        <li><a href='/ste/search?smiles=C1CC2CCC3C%28CCC4CCCCC34%29C2C1&property=@property'>
+                        <li><a class='bmlink' smiles='C1=CN2C=CC=CC2=C1'/>Indolizine</a></li>
+                        <li><a class='bmlink' smiles='C1=CC2=C(C=C1)N=CC=C2'>Quinoline</a></li>
+                        <li><a class='bmlink' smiles='C1CC2CCC3C%28CCC4CCCCC34%29C2C1'>
                             Steroid core</a></li>
-                        <li><a href='/ste/search?smiles=C1COC1&property=@property'>Oxetane</a></li>
-                        <li><a href='/ste/search?smiles=O%3DC1CSC%28%3DS%29N1&property=@property'>Rhodanine</a></li>
+                        <li><a class='bmlink' smiles='C1COC1'>Oxetane</a></li>
+                        <li><a class='bmlink' smiles='O=C1CSC(=S)N1'>Rhodanine</a></li>
                     </ul>
                 </li>
             </ul>
