--- a/app/views/tform.scala.html
+++ b/app/views/tform.scala.html
@@ -10,6 +10,11 @@
 
             $(document).ready(function () {
 
+                $(".bmlink").on("click", function () {
+                    $('#@form("smiles").name').val( $(this).attr("smiles") );
+                });
+
+
                 $("#close").bind("click", function () {
                     editorControl.close();
                 });
@@ -82,22 +87,22 @@
     </div>
 </div>
 
-@helper.form(postUrl, 'class -> "form-inline") {
-    <div class="col-1" style="padding-top: 2em;
-        padding-bottom: 0.5em;">
-        <div class="form-group">
-            @helper.CSRF.formField
-            <a title="Draw a structure" id="showSketcher" class="btn btn-primary"><i class="fa fa-flask" aria-hidden="true"></i></a>
-            <input type="text" class="form-control" placeholder="Enter a SMILES string" size="45" id='@form("smiles").name' name='@form("smiles").name'>
-            <select title="Property whose trend will be computed" class="form-control" id='@form("property").name' name='@form("property").name'>
-                <option value="compounds" @if(property.equals("compounds")) { selected }>Compounds</option>
-                <option value="assays" @if(property.equals("assays")) { selected }>Assays</option>
-                <option value="logS" @if(property.equals("logS")) { selected }>Solubility</option>
-                <option value="Fsp3" @if(property.equals("Fsp3")) { selected }>Fsp3</option>
-                <option value="qed" @if(property.equals("qed")) { selected }>Chemical Beauty</option>
-            </select>
-            <button type="submit" class="btn btn-default">Search</button>
+    @helper.form(postUrl, 'class -> "form-inline") {
+        <div class="col-1" style="padding-top: 2em;
+            padding-bottom: 0.5em;">
+            <div class="form-group">
+                @helper.CSRF.formField
+                <a title="Draw a structure" id="showSketcher" class="btn btn-primary"><i class="fa fa-flask" aria-hidden="true"></i></a>
+                <input type="text" class="form-control" placeholder="Enter a SMILES string" size="45" id='@form("smiles").name' name='@form("smiles").name'>
+                <select title="Property whose trend will be computed" class="form-control" id='@form("property").name' name='@form("property").name'>
+                    <option value="compounds" @if(property.equals("compounds")) { selected }>Compounds</option>
+                    <option value="assays" @if(property.equals("assays")) { selected }>Assays</option>
+                    <option value="logS" @if(property.equals("logS")) { selected }>Solubility</option>
+                    <option value="Fsp3" @if(property.equals("Fsp3")) { selected }>Fsp3</option>
+                    <option value="qed" @if(property.equals("qed")) { selected }>Chemical Beauty</option>
+                </select>
+                <button type="submit" class="btn btn-default">Search</button>
+            </div>
         </div>
-    </div>
-}
+    }
 
