--- a/app/views/menu.scala.html
+++ b/app/views/menu.scala.html
@@ -20,7 +20,7 @@
                             Spiroindanypiperadine</a></li>
                         <li><a class='bmlink' smiles='C1=CN2C=CC=CC2=C1'/>Indolizine</a></li>
                         <li><a class='bmlink' smiles='C1=CC2=C(C=C1)N=CC=C2'>Quinoline</a></li>
-                        <li><a class='bmlink' smiles='C1CC2CCC3C%28CCC4CCCCC34%29C2C1'>
+                        <li><a class='bmlink' smiles='C1CC2CCC3C(CCC4CCCCC34)C2C1'>
                             Steroid core</a></li>
                         <li><a class='bmlink' smiles='C1COC1'>Oxetane</a></li>
                         <li><a class='bmlink' smiles='O=C1CSC(=S)N1'>Rhodanine</a></li>
