--- a/app/views/tform.scala.html
+++ b/app/views/tform.scala.html
@@ -11,7 +11,7 @@
             $(document).ready(function () {
 
                 $(".bmlink").on("click", function () {
-                    $('#@form("smiles").name').val( $(this).attr("smiles") );
+                    $('#@form("smiles").name').val($(this).attr("smiles"));
                 });
 
 
@@ -101,6 +101,12 @@
                     <option value="Fsp3" @if(property.equals("Fsp3")) { selected }>Fsp3</option>
                     <option value="qed" @if(property.equals("qed")) { selected }>Chemical Beauty</option>
                 </select>
+                <br>
+                <label>
+                    <input type="checkbox" class="form-control" id='@form("allowSmallFragments").name'
+                    name='@form("allowSmallFragments").name'> Allow small fragments
+                </label>
+                <br>
                 <button type="submit" class="btn btn-default">Search</button>
             </div>
         </div>
