Added link to paper Cleaned up text

--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -44,15 +44,17 @@
                 <p class="lead">How can I cite this application?</p>
                 <p>If you find this application useful, consider citing
             <blockquote class="blockquote">
-                Zdrazil, B. and Guha, R., <i>J. Med. Chem.</i>, <b>2007</b>, submitted
+                Zdrazil, B. and Guha, R., <i>J. Med. Chem.</i>, <b>2007</b>, ASAP. DOI:
+                <a href="10.1021/acs.jmedchem.7b00954">10.1021/acs.jmedchem.7b00954</a>
             </blockquote></p>
 
                 <p class="lead">Frequently Asked Questions</p>
+                    <!--
                 <dl>
                     <dt>How is bioassay activity calculated?</dt>
                     <dd>Foo</dd>
                 </dl>
-
+                -->
             </div>
         </div>
     </div>
