Enable display of smoothed curves

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="row">
-        @tform(form, postUrl, "compounds")
+        @tform(form, postUrl, "compounds", "")
         </div>
 
         <div class="row">
