--- a/app/views/tform.scala.html
+++ b/app/views/tform.scala.html
@@ -1,4 +1,4 @@
-@(form: Form[TrendForm.Data], postUrl: Call, property: String)(implicit request: MessagesRequestHeader)
+@(form: Form[TrendForm.Data], postUrl: Call, property: String, smoothCurve: Boolean)(implicit request: MessagesRequestHeader)
 
 <head>
     <script src='@routes.Assets.versioned("javascripts/marvin/js/marvinjslauncher.js")'></script>
@@ -106,6 +106,9 @@
                 <label>
                     <input type="checkbox" class="form-control" id='@form("allowSmallFragments").name'
                     name='@form("allowSmallFragments").name'> Allow small fragments
+                    &nbsp;&nbsp;
+                    <input type="checkbox" class="form-control" id='@form("smoothCurve").name'
+                    name='@form("smoothCurve").name' @if(smoothCurve) {checked}> Smooth curve
                 </label>
             </div>
         </div>
