--- a/app/views/trends.scala.html
+++ b/app/views/trends.scala.html
@@ -1,6 +1,7 @@
 @(app: controllers.Application, form: Form[TrendForm.Data], postUrl: Call,
         property: String, smiles: Seq[String], smiColMap: Map[String, String],
-        trendData: Map[String, Map[Int, Double]])(implicit request: MessagesRequestHeader)
+        trendData: Map[String, Map[Int, Double]],
+        smoothCurve: Boolean)(implicit request: MessagesRequestHeader)
 
 
 @getYaxisLabel(s: String) = @{
@@ -21,7 +22,7 @@
 
         <div class="container vertical-center" id="main-box">
             <div class="row">
-            @tform(form, postUrl, property)
+            @tform(form, postUrl, property, smoothCurve)
             </div>
 
             <div class="row" style="padding: 1em;">
@@ -67,7 +68,7 @@
                         credits: false,
                         chart: {
                             renderTo: 'plotDiv',
-                            type: 'line'
+                            type: '@if(!smoothCurve){line} else {spline}'
                         },
                         plotOptions: {
                             series: {
