--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -10,9 +10,10 @@
                 The Scaffold Trend Explorer helps you look at property trends for a scaffold over time. Currently a
                 small set of properties are considered, but will be expanded over time. See here for a listing of
                 properties. You can compare trends for multiple scaffolds simultaneously and download the trend data
-                for individual scaffolds or all of them at one go. Note that for small scaffolds, query times can be
-                long and as a result, we disable queries for scaffolds with less than 8 heavy atoms. If you're
+                for individual scaffolds or all of them at one go. Note that for small scaffolds, query times can be long.
+                <!-- and as a result, we disable queries for scaffolds with less than 8 heavy atoms. If you're
                 willing to wait, this can be enabled.
+                -->
             </div>
         </div>
 
