--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -26,6 +26,7 @@
                 <ul style="padding-left: 2em;">
                     <li>Unique compound counts</li>
                     <li>Tested assay count</li>
+                    <li>Z-scored bioactivity</li>
                     <li>Solubility (log S at pH = 7.4), computed using <a href="https://www.optibrium.com/stardrop/stardrop-features.php">
                         StarDrop</a></li>
                     <li>Fsp3 (fraction of sp3 carbons, a measure of 3D-ness)</li>
