--- a/app/views/tform.scala.html
+++ b/app/views/tform.scala.html
@@ -96,6 +96,7 @@
             <input type="text" class="form-control" placeholder="Enter a SMILES string" size="45" id='@form("smiles").name' name='@form("smiles").name'>
             <select title="Property whose trend will be computed" class="form-control" id='@form("property").name' name='@form("property").name'>
                 <option value="compounds" @if(property.equals("compounds")) { selected }>Compounds</option>
+                <option value="activity" @if(property.equals("activity")) { selected }>Bioactivity</option>
                 <option value="assays" @if(property.equals("assays")) { selected }>Assays</option>
                 <option value="logS" @if(property.equals("logS")) { selected }>Solubility</option>
                 <option value="Fsp3" @if(property.equals("Fsp3")) { selected }>Fsp3</option>
