--- a/app/views/trends.scala.html
+++ b/app/views/trends.scala.html
@@ -7,6 +7,7 @@
 @getYaxisLabel(s: String) = @{
     s match {
         case "compounds" => "Unique Compound Count"
+        case "activity" => "Median Z-scored Bioactivity"
         case "assays" => "Tested Bioassays"
         case "jifs" => "Median JIF Rank"
         case "qed" => "Median Chemical Beauty"
