--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -8,8 +8,9 @@
         <div class="row">
             <div class="col-1">
                 The Scaffold Trend Explorer helps you look at property trends for a scaffold over time. Currently a
-                small set of properties are considered, but will be expanded over time. See here for a listing of
-                properties. You can compare trends for multiple scaffolds simultaneously and download the trend data
+                small set of properties are considered, but will be expanded over time. See
+                <a href="@controllers.routes.Application.about()">here</a> for a description of the
+                properties available. You can visually compare trends for multiple scaffolds simultaneously and download the trend data
                 for individual scaffolds or all of them at one go. Note that for small scaffolds, query times can be long.
                 <!-- and as a result, we disable queries for scaffolds with less than 8 heavy atoms. If you're
                 willing to wait, this can be enabled.
@@ -18,7 +19,7 @@
         </div>
 
         <div class="row">
-        @tform(form, postUrl, "compounds", "")
+        @tform(form, postUrl, "compounds", false)
         </div>
 
         <div class="row">
