Added support for simple moving average curves

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -16,8 +16,9 @@
 
 
             <!-- Don't use local version since it doesn't respect per series color spec -->
-        <script src="http://code.highcharts.com/highcharts.js"></script>
+        <script src="https://code.highcharts.com/stock/highstock.js"></script>
         <script src="http://code.highcharts.com/highcharts-more.js"></script>
+        <script src="https://code.highcharts.com/stock/indicators/indicators.js"></script>
 
     </head>
     <body>
