Don't show markers for moving average curves

--- a/app/views/trends.scala.html
+++ b/app/views/trends.scala.html
@@ -118,7 +118,10 @@
                             params: {period: 3},
                             linkedTo: '@smi',
                             color: '@smiColMap(smi)',
-                            visible: false
+                            visible: false,
+                            marker: {
+                                enabled: false
+                            }
                         },
                         {
                             name: "SMA(5) @smi",
@@ -127,7 +130,10 @@
                             params: {period: 5},
                             linkedTo: '@smi',
                             color: '@smiColMap(smi)',
-                            visible: false
+                            visible: false,
+                            marker: {
+                                enabled: false
+                            }
                         },
                         {
                             name: "SMA(10) @smi",
@@ -136,7 +142,10 @@
                             params: {period: 10},
                             linkedTo: '@smi',
                             color: '@smiColMap(smi)',
-                            visible: false
+                            visible: false,
+                            marker: {
+                                enabled: false
+                            }
                         },
 
                         }
