--- a/app/views/tform.scala.html
+++ b/app/views/tform.scala.html
@@ -118,6 +118,7 @@
                 <option value="logS" @if(property.equals("logS")) { selected }>Solubility</option>
                 <option value="Fsp3" @if(property.equals("Fsp3")) { selected }>Fsp3</option>
                 <option value="qed" @if(property.equals("qed")) { selected }>Chemical Beauty</option>
+                <option value="sa" @if(property.equals("sa")) { selected }>Synthetic Accessibility</option>
             </select>
             <button type="submit" class="btn btn-info">Search</button>
             <br>
