--- a/app/views/trends.scala.html
+++ b/app/views/trends.scala.html
@@ -14,6 +14,7 @@
             case "logS" => "Median logS (pH = 7.4)"
             case "Fsp3" => "Median Fsp3"
             case "complexity" => "Molecular Complexity"
+            case "sa" => "Median Synthetic Accessibility"
         }
     }
 
