Shifted bookmarked scaffolds to a conf file and updated front end to dynamically generate bookmark menu Added config for hosts to listen to Added more scaffold bookmark entries Bumped version number

--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -1,7 +1,7 @@
-@(app: controllers.Application)
+@(app: controllers.Application)(implicit configuration: play.api.Configuration)
 
 @main(app, "Scaffold Trend Explorer") {
-    @menu("compounds")
+    @menu("compounds", configuration)
 } {
     <div class="container vertical-center" id="main-box">
 
