--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -10,7 +10,7 @@
                 The Scaffold Trend Explorer helps you look at property trends for a scaffold over time. Currently a
                 small set of properties are considered, but will be expanded over time. See
                 <a href="@controllers.routes.Application.about()">here</a> for a description of the
-                properties available. You can visually compare trends for multiple scaffolds simultaneously and download the trend data
+                properties available. You can visually compare trends for multiple (upto 9)scaffolds simultaneously and download the trend data
                 for individual scaffolds or all of them at one go. Note that for small scaffolds, query times can be long.
             </div>
         </div>
