--- a/app/views/footer.scala.html
+++ b/app/views/footer.scala.html
@@ -1,13 +1,22 @@
-<div class="navbar navbar-default navbar-fixed-bottom" id="footer">
-    <ul class="list-inline">
-        <li class="list-inline-item"><a href="http://www.ncats.nih.gov" target="_blank">NCATS Home</a></li>
-        <li class="list-inline-item"><a href="http://www.nih.gov/about/privacy.htm" target="_blank">Privacy Notice</a></li>
-        <li class="list-inline-item"><a href="http://ncats.nih.gov/comments" target="_blank">Comment Policy</a></li>
-        <li class="list-inline-item"><a href="http://www.nih.gov/about/disclaim.htm" target="_blank">Disclaimer</a></li>
-        <li class="list-inline-item"><a href="http://ncats.nih.gov/accessibility" target="_blank">Accessibility</a></li>
-        <li class="list-inline-item"><a href="http://ncats.nih.gov/foia" target="_blank">FOIA</a></li>
-        <li class="list-inline-item last"><a href="http://oig.hhs.gov/" target="_blank">OIG</a></li>
-    </ul>
-    <p class="address">Build: @controllers.BuildInfo.TIME (commit: <a href="https://spotlite.nih.gov/ncats/scaffold-trend-explorer/tree/@controllers.BuildInfo.COMMIT">@controllers.BuildInfo.COMMIT</a>)</p>
-    <p class="address">National Center for Advancing Translational Sciences (NCATS), 6701 Democracy Boulevard, Bethesda MD 20892-4874 • 301-435-0888</p>
+<div class="inxight-footer">
+	<div class="container">
+		<div class="item"><a target="_blank" href="https://www.nih.gov/">NIH</a></div>
+		<div class="item"><a target="_blank" href="https://ncats.nih.gov/">NCATS</a></div>
+		<div class="item"><a target="_blank" href="https://ncats.nih.gov/privacy">PRIVACY ACT</a></div>
+		<div class="item"><a target="_blank" href="https://ncats.nih.gov/accessibility">ACCESSIBILITY</a></div>
+		<div class="item-last"><a target="_blank" href="https://ncats.nih.gov/disclaimer">DISCLAIMER</a></div>
+		<div class="statement">
+			<div class="statement-desktop">
+				For <a href="http://edi.nih.gov/consulting/language-access-program/about" target="_blank" title="Read  the plan">language access</a> assistance,
+				contact the <a href="mailto:info@@ncats.nih.gov" title="Email Public Information Officer">NCATS Public Information Officer</a>
+				<br>
+			</div>
+			<div>
+				National Center for Advancing Translational Sciences (NCATS),
+				<span class="mobile-statement-break"><br></span>
+				6701 Democracy Boulevard, Bethesda MD 20892-4874 • 301-594-8966
+
+			</div>
+		</div>
+	</div>
 </div>
